add mdl framework

--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -4,3 +4,10 @@
   <li><a href="/robots">Robot Index</a></li>
   <li><a href="/robots/new">New Robot</a></li>
 </ul>
+
+<p><%=  @average_robot_age %></p>
+<p><%=  @robots_hired_per_year %></p>
+<p><%=  @robots_per_department %></p>
+<p><%=  @robots_per_city %></p>
+<p><%=  @robots_per_state %></p>
+
