--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,3 +1,4 @@
+<section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
 <form action="/robots/<%= @robot.id %>" method="post">
 	<p>Edit</p>
 	<input type="hidden" name="_method" value="PUT">
@@ -10,3 +11,4 @@
 	<input type="submit" value="Update Robot">
 	
 </form>
+</section>
